--- a/FRONT/public/componentes/Login/Login.html
+++ b/FRONT/public/componentes/Login/Login.html
@@ -14,7 +14,7 @@
 
         <form action="" id="formulario">
            <input id="inputPassword" type="password" placeholder="Contraseña" /> 
-           <input id="enviar" type="submit">
+           <input id="enviar" type="submit" value="Iniciar">
          </form> 
       </div>
     </div>
