chore (JTB/Front): Creando el escritorio y su funcion de crear iconos

--- a/FRONT/public/componentes/escritorio/escritorio.html
+++ b/FRONT/public/componentes/escritorio/escritorio.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/css/escritorio.css">
 </head>
 <body>
+
+    <div id="escritorio">
+        <div class="iconEscritorio">
+            <img class="iconImage" src="./src/iconos/desktop_icon-icons.com_66537.ico" alt="">
+            <span class="iconText">Equipo</span>
+        </div>
+    </div>
     
+
+    <script src="./src/js/escritorio.js"></script>
 </body>
 </html>
