chore(JTB/Front): creacion de la funcion para unir componentes(err de ruta)

--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -1,21 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <title>Title</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="stylesheet" href="./srcg/css/styles.css">
 </head>
 
 <body>
 
+  <div id="cuerpo">
+    <div id="login"></div>
+
+  </div>
 
    
 
 
-  
+  <script src="./srcg/js/agregoComponentes.js"></script>
 </body>
 
 </html>
