--- a/FRONT/public/componentes/Login/Login.html
+++ b/FRONT/public/componentes/Login/Login.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/login.css" />
+     
     <title></title>
   </head>
   <body>
     <div id="login">
+      <link rel="stylesheet" type="text/css"  href="componentes/Login/src/css/login.css" />
       <div id="compoCentral">
-        <img id="imgSesion" src="./src/images/abc-124.jpg" alt="">
+        <img id="imgSesion" src="componentes/Login/src/images/abc-124.jpg" alt="">
         <h3 id="usuario">Usuario</h3> 
 
         <form action="" id="formulario">
@@ -17,8 +18,9 @@
            <input id="enviar" type="submit" value="Iniciar">
          </form> 
       </div>
+      <script type="text/js" src="componentes/Login/src/js/login.js"></script>
     </div>
 
-    <script src="./src/js/login.js"></script>
+    
   </body>
 </html>
