--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/styles.css">
     <title>Evolution'S</title>
 </head>
 <body>
-    
+    <button></button>
 
 
     <script src="./src/js/clases.js"></script>
