chore:(JTB/Front):realizacion de clases[SO,Escritorio,BarraTarea]y conexion entre ellas

--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -7,9 +7,10 @@
     <title>Evolution'S</title>
 </head>
 <body>
-    <button></button>
 
 
-    <script src="./src/js/clases.js"></script>
+    <script src="./src/js/clases/barraTareas.js"></script>
+    <script src="./src/js/clases/escritorio.js"></script>
+    <script src="./src/js/clases/sistemaOperativo.js"></script>
 </body>
 </html>
