chore(JTB/Front): agrego de la clase [btnInicio, icono] funcional btnInicio

--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-
+    <script src="./src/js/clases/icono.js"></script>
+    <script src="./src/js/clases/btnInicio.js"></script>
     <script src="./src/js/clases/barraTareas.js"></script>
     <script src="./src/js/clases/escritorio.js"></script>
     <script src="./src/js/clases/sistemaOperativo.js"></script>
