chore(JTB/Front): renderizado de iconos funcional

--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/styles.css">
+    <link rel="stylesheet" href="./src/css/barraT.css">
+    <link rel="stylesheet" href="./src/css/btnInicio.css">
+
     <title>Evolution'S</title>
 </head>
 <body>
 
     <script src="./src/js/clases/icono.js"></script>
+    <script src="./src/js/clases/iconosEspecializados.js"></script>
     <script src="./src/js/clases/btnInicio.js"></script>
     <script src="./src/js/clases/barraTareas.js"></script>
     <script src="./src/js/clases/escritorio.js"></script>
