chore(JTB/front):ventana general realizada pero sin funcionalidades aparentes solo cerrar (boton inicio evento de foco realizado)

--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="./src/css/styles.css">
     <link rel="stylesheet" href="./src/css/barraT.css">
     <link rel="stylesheet" href="./src/css/btnInicio.css">
+    <link rel="stylesheet" href="./src/css/ventana.css">
 
     <title>Evolution'S</title>
 </head>
 <body>
 
+    <script src="./src/js/clases/ventana.js"></script>
     <script src="./src/js/clases/icono.js"></script>
     <script src="./src/js/clases/iconosEspecializados.js"></script>
     <script src="./src/js/clases/btnInicio.js"></script>
