chore(JTB/Front):agrego de la entrada de datos del servidor y agrego y manejo de la ventana de explorador de archivos:

--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 
+
+    <script src="./src/js/sistema de archivos/entradaDatos.js"></script>
     <script src="./src/js/clases/ventana.js"></script>
+    <script src="./src/js/clases/ventanaExploradorArchivos.js"></script>
     <script src="./src/js/clases/icono.js"></script>
     <script src="./src/js/clases/iconosEspecializados.js"></script>
     <script src="./src/js/clases/btnInicio.js"></script>
