chore(JTB/Front): entrada de datos y manipulacion de esos datos completada

--- a/FRONT/public/index.html
+++ b/FRONT/public/index.html
@@ -13,9 +13,14 @@
 <body>
 
 
+    
     <script src="./src/js/sistema de archivos/entradaDatos.js"></script>
+    <script src="./src/js/sistema de archivos/archivo.js"></script>
+    <script src="./src/js/sistema de archivos/carpetas.js"></script>
+    <script src="./src/js/sistema de archivos/directorio.js"></script>
     <script src="./src/js/clases/ventana.js"></script>
     <script src="./src/js/clases/ventanaExploradorArchivos.js"></script>
+    
     <script src="./src/js/clases/icono.js"></script>
     <script src="./src/js/clases/iconosEspecializados.js"></script>
     <script src="./src/js/clases/btnInicio.js"></script>
